--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,7 +12,7 @@ main:
     url: /posts/
 #  - title: "Updates"
 #    url: /updates/
-  - title: "My Toolset"
-    url: /mytoolset/
+#  - title: "My Toolset"
+#    url: /mytoolset/
   - title: "Useful Links"
     url: /usefullinks/
