--- a/_config.yml
+++ b/_config.yml
@@ -109,7 +109,7 @@ analytics:
 author:
   name             : "Olcay Sahin"
   avatar           : "/assets/images/profilephoto.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "Postdoc Researcher"
+  bio              : "Computational Transportation Engineer"
   location         : "Lemont, IL"
   email            :
   links:
