--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,8 +4,8 @@ main:
     url: /about/
   - title: "Publications"
     url: /publications/
-  - title: "Research & Projects"
-    url: /research/
+#  - title: "Research & Projects"
+#    url: /research/
   - title: "RShiny Showcase"
     url: /RShiny/
   - title: "Posts"
